Sun Aug 24 08:03:31 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (daylight, timezone): not provied as dllexport on cygwin,
	  right now.

Sun Aug 24 06:39:05 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cgi.rb (CGI::unescapeHTML): more encoding sensible unescaping.

Sun Aug 24 04:23:19 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (enc_compatible_p): raise TypeError when argument is Encoding.

Sat Aug 23 23:25:47 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cgi.rb (CGI#out): remove auto encoding conversion and set
	  LANGUAGE. [ruby-dev:35922]

Sat Aug 23 20:01:29 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_process.rb (TestProcess#test_rlimit_value):
	  add Errno::EINVAL. [ruby-dev:35900]

Sat Aug 23 18:29:29 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_scan_open_args): use pop_last_hash.

Sat Aug 23 16:59:42 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/io.h (FMODE_INVALID_MASK): defined.
	  (FMODE_INVALID_IGNORE): defined.
	  (FMODE_INVALID_REPLACE): defined.
	  (FMODE_UNDEF_MASK): defined.
	  (FMODE_UNDEF_IGNORE): defined.
	  (FMODE_UNDEF_REPLACE): defined.

	* io.c (sym_invalid): defined.
	  (sym_undef): defined.
	  (sym_ignore): defined.
	  (sym_replace): defined.
	  (make_readconv): specify ECONV_INVALID_* and ECONV_UNDEF_* if
	  FMODE_INVALID_* and FMODE_UNDEF_* is set.
	  (rb_io_extract_modeenc): check {:invalid, :undef} => {:replace,
	  :ignore} for FMODE_INVALID_* and FMODE_UNDEF_*.

Sat Aug 23 17:06:57 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (rb_strftime): support more flags.

Sat Aug 23 15:14:10 2008  Koichi Sasada  <ko1@atdot.net>

	* vm_opts.h: enable "OPT_TRACE_INSTRUCTION" on default.

Sat Aug 23 14:59:32 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h (ECONV_INVALID_MASK): defined.
	  (ECONV_INVALID_IGNORE): defined.
	  (ECONV_INVALID_REPLACE): defined.
	  (ECONV_UNDEF_MASK): defined.
	  (ECONV_UNDEF_IGNORE): defined.