@@ -1,3 +1,7 @@
+Sun Aug 24 10:55:00 2008  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* enc/emacs_mule.c: support Emacs/Mule internal encoding.
+
 Sun Aug 24 08:03:31 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* strftime.c (daylight, timezone): not provied as dllexport on cygwin,
